[tool.poetry]
name = "py-pong"
version = "0.1.0"
description = ""
authors = ["Daniel Donateli <danieldonateli@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
start = 'py_pong.main:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
